[package]
name = "vus-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Christian Schlein"]
license = "MIT"
description = "ClinVar VUS reclassification + submission tracker — powered by nano-zyrkel"

[[bin]]
name = "vus-tracker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
scraper = "0.22"
url = "2"
jsonpath-rust = "0.7"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
imap = "2"
native-tls = "0.2"
base64 = "0.22"
mailparse = "0.15"

[features]
default = []
rhai-scripting = ["dep:rhai"]
browser = ["dep:headless_chrome"]

[dependencies.rhai]
version = "1"
optional = true

[dependencies.headless_chrome]
version = "1"
optional = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "s"
