[package]
name = "vus-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Christian Schlein"]
license = "MIT"
description = "ClinVar VUS reclassification + submission tracker — powered by nano-zyrkel"

[[bin]]
name = "vus-tracker"
path = "src/main.rs"

[lib]
name = "vus_tracker_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
sha2 = "0.10"
base64 = "0.22"

# WASM-only deps
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Native-only deps (not compiled for WASM)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
scraper = { version = "0.22", optional = true }
url = { version = "2", optional = true }
jsonpath-rust = { version = "0.7", optional = true }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"], optional = true }
imap = { version = "2", optional = true }
native-tls = { version = "0.2", optional = true }
mailparse = { version = "0.15", optional = true }

[features]
default = ["native"]
native = ["tokio", "reqwest", "tracing", "tracing-subscriber", "clap", "scraper", "url", "jsonpath-rust", "lettre", "imap", "native-tls", "mailparse"]
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
rhai-scripting = ["dep:rhai"]
browser = ["dep:headless_chrome"]

[dependencies.rhai]
version = "1"
optional = true

[dependencies.headless_chrome]
version = "1"
optional = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
