[package]
name = "vus-tracker"
version = "0.2.0"
edition = "2021"
authors = ["Christian Schlein"]
license = "MIT"
description = "ClinVar VUS reclassification + submission tracker — powered by nano-zyrkel"

[[bin]]
name = "vus-tracker"
path = "src/main.rs"

[lib]
name = "vus_tracker_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Domain-specific dependencies (used by the clinvar/ + wasm/ modules
# that live in this user repo). The generic plumbing — config parsing,
# fetchers, conditions, notifiers, runtime — comes from
# nano-zyrkel-core via the [target] sections below.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
sha2 = "0.10"
base64 = "0.22"

# Native-only: pull the central binary core for the runtime, dispatch
# logic, fetchers, notifiers and the Plugin trait. Pinned to a tag so
# this user repo cannot pick up a breaking change accidentally.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nano-zyrkel-core = { git = "https://github.com/schlein-lab/nano-zyrkel", tag = "bin-v0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# WASM-only: pull the central WASM core for DataLoader + ConfigReader
# and add the bindgen helpers we need for the panels/vcf modules.
[target.'cfg(target_arch = "wasm32")'.dependencies]
nano-zyrkel-wasm-core = { git = "https://github.com/schlein-lab/nano-zyrkel", tag = "wasm-v0.1.0", default-features = false, features = ["data", "config", "viz-basic", "viz-spatial"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[features]
default = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-mutable-globals",
    "--enable-sign-ext",
]
